added background image to registration and login components

--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background: url("../images/Background.png") no-repeat center;
 }
 .register__container {
   display: flex;
